2017-07-05  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* server/GdbServer.cpp (GdbServer::rspCommand): Add missing
	monitor commands.
	(GdbServer::rspSetCommand): Created.
	(GdbServer::rspShowCommand): Created.
	* server/GdbServer.h (class GdbServer): Add rspSetCommand and
	rspShowCommand methods.
	* server/RspPacket.cpp (RspPacket::packRcmdStr): Created.
	* server/RspPacket.h (class RspPacket): Add packRcmdStr method.
	* server/TraceFlags.cpp (TraceFlags::traceRsp): Add setter.
	(TraceFlags::allFlags): Created setter and getter.
	* server/TraceFlags.h: Add traceRsp setter and allFlags setter and
	getter methods.
	* server/Utils.cpp (Utils::split): Created.
	* server/Utils.h (class Utils): Added split method.

2017-07-04  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	This is a GDB server to work with RI5CY with 128-bit wide
	instruction FIFO. It also fixes a minor glitch with RSP.

	* server/RspConnection.cpp (RspConnection::RspConnection):
	Initialize mNumGetBufChars.
	* targets/ri5cy/Ri5cyImpl.cpp (Ri5cyImpl::stepInstr)
	(Ri5cyImpl::runToBreak): No need to flush the pipeline.

2017-07-04  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* server/GdbServer.cpp (GdbServer::rspCommand): Add "monitor
	cyclecount".
	* targets/ri5cy/Ri5cyImpl.h: Correct name of DBG_HIT_SSTH from
	DBG_HIT_SSTE.

2017-07-04  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* targets/ri5cy/Ri5cyImpl.cpp (Ri5cyImpl::stepInstr): Write
	DBG_CTRL after flushing pipeline.
	(Ri5cyImpl::runToBreak): Compute value for DBG_CTRL before
	flushing the pipeline, so can write DBG_CTRL in the next cycle.

2017-07-03  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* targets/ri5cy/Ri5cyImpl.cpp (Ri5cyImpl::runToBreak): Tried a
	different sequence.

2017-07-03  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	This implementation provides a way to resume continuously, but
	does not yet work with the RI5CY implementation. It seems the
	pipeline does not get fully flushed.
